--- a/AlbertBiju/style.css
+++ b/AlbertBiju/style.css
@@ -4,7 +4,7 @@ body {
   background: linear-gradient(160deg, #1a1a2e, #1e1a1a);
   color: #eaeaea;
   letter-spacing: 0.5px;
-  background-image: url("asset/sphere.jpg"); 
+  background-image: url("asset/Sphere.jpg"); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
