--- a/Nikitha/src/App.css
+++ b/Nikitha/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -22,8 +24,9 @@
   background-color: var(--background-color);
   line-height: 1.6;
 }
+
  body{
-  font-family: "Inter", "Roboto", sans-serif;
+  font-family:"Roboto",Arial,Helvetica,sans-serif;
   background: var(--background-color);
   color: var(--text-color);
   line-height: 1.6;
@@ -38,3 +41,12 @@
   color: var(--text-color);
   border-radius: var(--radius);
  }
+
+ .app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.main-content {
+  flex: 1;
+}
