--- a/Nikitha/src/components/About/About.module.css
+++ b/Nikitha/src/components/About/About.module.css
@@ -2,7 +2,7 @@
   max-width: 1500px;
   margin: 40px auto;
   padding: 32px 16px;
-  background: #37103f;
+  background: #140b16;
   border-radius: 14px;
   box-shadow: 0 2px 16px rgba(0,0,0,0.07);
 }
@@ -12,7 +12,7 @@
   font-weight: bold;
   margin-bottom: 20px;
   text-align: center;
-  color: #161e7c;
+  color: #9294aa;
 }
 
 .about-text {
