--- a/Nikitha/src/components/Contactus/Contactus.module.css
+++ b/Nikitha/src/components/Contactus/Contactus.module.css
@@ -2,7 +2,7 @@
   max-width: 2000px;
   margin: 40px auto;
   padding: 24px 16px;
-  background: #061119;
+  background: #140b16;
   border-radius: 10px;
   box-shadow: 0 2px 12px rgba(12, 64, 115, 0.08);
   text-align: center;
@@ -11,22 +11,22 @@
 .contactus-title {
   font-size: 1.7rem;
   font-weight: bold;
-  color: #02274d;
+  color: #9294aa;
   margin-bottom: 18px;
 }
 
 .contactus-info {
   font-size: 1.1rem;
-  color: #221e1e;
+  color: #ffffff;
   margin-bottom: 12px;
 }
 
 .contactus-link {
-  color: #0e1317;
+  color: #a93882;
   text-decoration: underline;
   transition: color 0.2s;
 }
 
 .contactus-link:hover {
-  color: #0d47a1;
+  color: #497cca;
 }
