--- a/Nikitha/src/components/Copyright/Copyright.module.css
+++ b/Nikitha/src/components/Copyright/Copyright.module.css
@@ -1,6 +1,6 @@
 .footer-copyright {
   font-size: 0.95em;
-  color: #d9c8c8;
+  color: #f0e9e9;
   opacity: 0.8;
   text-align: center;
   margin-top: 10px;
