--- a/Nikitha/src/components/Schedule/Schedule.module.css
+++ b/Nikitha/src/components/Schedule/Schedule.module.css
@@ -1,8 +1,8 @@
 .schedules-container {
   max-width: 1500px;
-  margin: 45px auto;
+  margin: 30px auto;
   padding: 32px 16px;
-  background:#140b16;
+  background: linear-gradient(135deg, #161219 60%, #390f2f 100%);
   border-radius: 14px;
   box-shadow: 0 2px 12px rgba(0,0,0,0.07);
   text-align: center;
@@ -22,8 +22,6 @@
   margin: 0 auto;
   text-align: left;
   max-width: 500px;
-
-  
 }
 
 .schedules-list li {
